--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,13 @@ edition = "2021"
 
 [dependencies]
 gloo-console = "0.2"
+gloo-utils = "0.1"
 yew = "0.19"
 
 [dependencies.web-sys]
 version = "0.3"
 # Maybe needed for get_bounding_client_rect
 features = [
+  "CssStyleDeclaration",
   "DomRect",
 ]
